app/css/modules/dropdown.css
/*
<div class="dropdown">
  <button class="dropdown-button">Dropdown</button>
  <div class="dropdown-content">
    <a href="#">Link 1</a>
    <a href="#">Link 2</a>
    <a href="#">Link 3</a>
  </div>
</div>

This is
<div class="dropdown">
  <span class="dropdown-inline">2018</span>&#x25BC;
  <div class="dropdown-content">
    <a href="#">2010</a>
    <a href="#">2011</a>
    <a href="#">2012</a>
  </div>
</div>
some text.
*/


.dropdown-inline {
    cursor: pointer;
}

.dropdown button {
    background-color: #3f51b5;
    color: white;
    padding: 16px;
    font-size: 14px;
    border: none;
    cursor: pointer;
    border-radius: 2px;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
    position: relative;
    display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    white-space: nowrap;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
    min-width: 100%;
}

/* Links inside the dropdown */
.dropdown-content a {
    color: black;
    padding: 8px 12px;
    text-decoration: none;
    display: block;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {background-color: #f1f1f1}

/* Show the dropdown menu on hover */
.dropdown:hover .dropdown-content {
    display: block;
}

/* Change the background color of the dropdown button when the dropdown content is shown */
.dropdown:hover .dropdown-inline {
    background-color: #ccc;
}

